concession-kiosk-kustomize-demo/base/default-deny-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: concession-kiosk-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
