concession-kiosk-kustomize-demo/base/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
spec:
  policyTypes:
  - Ingress
